client/src/pages/Story/story.scss
@media screen and (max-width: 420px) {
  .containerStory {
    height: 160vh !important;
    padding-bottom: 10rem !important;
    padding-left: 1rem !important;

    h1 {
      margin-left: -2rem !important;
    }
  }
}

.containerStory {
  height: 100vh;
  display: flex;
  justify-content: space-between;
  padding-left: 30px;
  padding-top: 4rem;
  padding-bottom: 6rem;
  -webkit-font-smoothing: antialiased;

  .contentStory {
    flex: 1;
    font-size: 14px;
    color: rgb(100, 98, 98);
    line-height: 1.5;
  }

  .div > fade-in {
    animation: fadeIn 3s;
    transition: ease-in;
    -webkit-transition: ease-in;
    -moz-transition: ease-in;
    -ms-transition: ease-in;
    -o-transition: ease-in;
    -webkit-animation: fadeIn 3s;
  }

  .storyHeading {
    font-size: 1.8rem;
    font-family: on9jai2;
    color: black;
  }

  h1 {
    padding-top: 2rem;
  }

  span {
    flex: 1;
  }

  p {
    margin-left: -5.2rem;
    text-align: justify;
  }

  @keyframes fadeIn {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }

  @-moz-keyframes fadeIn {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }

  @-webkit-keyframes fadeIn {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }

  @-o-keyframes fadeIn {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }

  @-ms-keyframes fadeIn {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }
}

